18-Jan-2012 Any directory structure in the main package's Script folder is now represented faithfully in a debugging Opus project.

18-Jan-2012 The Global Option Override delegate should be executed BEFORE any other.

18-Jan-2012 Renamed Opus.Core.BaseOptionCollection.ProcessSetHandlers() to RefreshCachedValues(), to be more meaningful to users without having to understand the implementation details.

18-Jan-2012 In Opus.Core.Target, cache the 'key' used to identify instances, rather than using System.String.Format for each request, which is slow.

18-Jan-2012 Added methods Include and Exclude to Opus.Core.FileCollection. The former maps to AddRelativePaths, while the latter is new and will remove any files matching the pattern that the FileCollection already is aware of.

18-Jan-2012 Only schedule output from nodes built if there is something to output. This is another optimizations - the end of the build was waiting for a thread to process all of the empty strings.

17-Jan-2012 Optimization while creating option collections, so that update delegates are only added once to a node.

17-Jan-2012 Added better granularity to the timing item GraphGeneration; split into PopulateGraph, CreatOptionCollections, HandleInjectionDependents.

17-Jan-2012 Improved debugging messages while attaching update delegates to modules's UpdateOptions event.

17-Jan-2012 Gcc compiler, archiver and linker supports response files.

16-Jan-2012 Adding a WindowsSDK version 'VC8PlatformSDK' that is the PlatformSDK within the VisualStudio 2005 installation folder.

16-Jan-2012 VisualC compiler, archiver and linker supports response files.

16-Jan-2012 Added new interface, Opus.Core.IToolSupportsResponseFile, that requires a tool to provide the response file argument.
            CommandLineProcessor package uses this to write the options usually passed directly to the tool, to the response file instead, and make use of it.
