@@ -43,5 +43,64 @@ namespace C.CPlusPlus
                 this.list.Add(objectFile);
             }
         }
+
+        public void Include(object owner, params string[] pathSegments)
+        {
+            Opus.Core.PackageInformation package = Opus.Core.PackageUtilities.GetOwningPackage(owner);
+            if (null == package)
+            {
+                throw new Opus.Core.Exception(System.String.Format("Unable to locate package '{0}'", owner.GetType().Namespace), false);
+            }
+
+            string packagePath = package.Identifier.Path;
+            Opus.Core.ProxyModulePath proxyPath = (owner as Opus.Core.IModule).ProxyPath;
+            if (null != proxyPath)
+            {
+                packagePath = proxyPath.Combine(package.Identifier);
+            }
+
+            Opus.Core.StringArray filePaths = Opus.Core.File.GetFiles(packagePath, pathSegments);
+            foreach (string path in filePaths)
+            {
+                ObjectFile objectFile = new ObjectFile();
+                objectFile.ProxyPath = this.ProxyPath;
+                objectFile.SourceFile.SetAbsolutePath(path);
+                this.list.Add(objectFile);
+            }
+        }
+
+        public void Exclude(object owner, params string[] pathSegments)
+        {
+            Opus.Core.PackageInformation package = Opus.Core.PackageUtilities.GetOwningPackage(owner);
+            if (null == package)
+            {
+                throw new Opus.Core.Exception(System.String.Format("Unable to locate package '{0}'", owner.GetType().Namespace), false);
+            }
+
+            string packagePath = package.Identifier.Path;
+            Opus.Core.ProxyModulePath proxyPath = (owner as Opus.Core.IModule).ProxyPath;
+            if (null != proxyPath)
+            {
+                packagePath = proxyPath.Combine(package.Identifier);
+            }
+
+            Opus.Core.StringArray filePaths = Opus.Core.File.GetFiles(packagePath, pathSegments);
+            System.Collections.Generic.List<ObjectFile> toRemove = new System.Collections.Generic.List<ObjectFile>();
+            foreach (string path in filePaths)
+            {
+                foreach (ObjectFile file in this.list)
+                {
+                    if (file.SourceFile.AbsolutePath == path)
+                    {
+                        toRemove.Add(file);
+                    }
+                }
+            }
+
+            foreach (ObjectFile file in toRemove)
+            {
+                this.list.Remove(file);
+            }
+        }
     }
 }
